@@ -1,3 +1,7 @@
+drkns 16.08.2017 09:22:10 +0000 - build 5007
+
+1. C форума: DI_TEXT + DIF_CENTERTEXT выравнивался по центру диалога вместо относительно координат X1 и X2.
+
 drkns 14.08.2017 21:38:39 +0000 - build 5006
 
 1. Теперь FCTL_<G|S>ETUSERSCREEN можно использовать и из режимов редактора (-e) и просмотра (-v).
